fix activity count notify layout bug

--- a/views/themes/activity/assets/stylesheets/activity/activity.scss
+++ b/views/themes/activity/assets/stylesheets/activity/activity.scss
@@ -38,13 +38,13 @@
         }
         .qor-activities__count{
             position: relative;
-            top: -5px;
+            top: -2px;
             left: 0;
             border-radius: 50%;
             text-align: center;
-            width: 15px;
-            height: 14px;
-            line-height: 15px;
+            width: 16px;
+            height: 16px;
+            line-height: 16px;
             font-size: 10px;
             z-index: 9999;
             background-color: #ff4081;
